[package]
name = "rust_abf"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Luca Rossi <lucarossi147@gmail.com>"]
description = "Rust crate for reading data from Axon Binary Format (ABF) files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.0"
byteorder = "1.4.0"
rayon = "1.7.0"